# openadapt-flow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  claims.yaml  public-artifacts.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  mypy-interop.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: canvas-nodom-ladder.yml  ci.yml  citrix-workspace-standin.yml  cla.yml  docker-rdp-vision-ladder.yml  paper.yml  quickstart-lifecycle.yml  release.yml  validate-claims.yml
benchmark/: BENCHMARK.md  results.json
benchmark/agent_arm_verticals/: README.md
benchmark/appliance_validation/: .gitignore  REPORT.md  results.json  results_identity_full.json  results_supplement.json  run_validation.py  service_manager.py  state_fixtures.py  supplement_identity_numeric.py  supplement_resolution.py
benchmark/canvas_ladder/: README.md  results.json  run_canvas_ladder_qualification.py
benchmark/citrix_workspace/: README.md  results.json  run_citrix_workspace_qualification.py
benchmark/comparison_artifact/: README.md  comparison.html  comparison.json  generate.py
benchmark/cosmetic_drift/: COSMETIC_DRIFT.md  results.json  results.md  sweep.py
benchmark/dense_surface/: DENSE_SURFACE.md  dense_surface.json  digit_flanked_probe.py  dom_identity_probe.py
benchmark/desktop/: BENCHMARK.md  results.json
benchmark/dom/: BENCHMARK.md  results.json
benchmark/effect_e2e/: EFFECT_E2E.md  ground_truth.py  record_service.py  results.json  run.py  verifiers.py
benchmark/effect_readback/: RESULTS.md  results.json  run.py
benchmark/effectbench/: LEADERBOARD.md  README.md  SPEC.md  pyproject.toml  reference_fault_model.py
benchmark/effectbench/effectbench/: __init__.py  __main__.py  adapter.py  effect.py  judge.py  leaderboard.py  metrics.py  oracle.py  provider.py  reference.py  runner.py  schema.py
benchmark/effectbench/effectbench/fixtures/: __init__.py  mockmed.py
benchmark/effectbench/effectbench/tasks/: __init__.py  mockmed.py
benchmark/effectbench/results/: openadapt_reference.json  reference.json
benchmark/effectbench/task_pack/: README.md  __init__.py  _authoring.py  audit.py  driver.py  frappe_tasks.py  manifest.json  mockmed_tasks.py  openemr_tasks.py  pack.py
benchmark/effectbench/tests/: test_adapter.py  test_boundary.py  test_classifier.py  test_external_provider.py  test_leaderboard.py  test_metrics.py  test_reference.py
benchmark/environments/: README.md  __init__.py  environments.json  registry.py  verification.json  verify.py
benchmark/fault_model/: FAULT_MODEL.md  faults.py  results.json  run.py
benchmark/frappe_lending/: .gitignore  Containerfile.pinned  README.md  __init__.py  apps.json  bootstrap_fixture.py  compose.yml  environment.lock.json  fixture.py
benchmark/governed_run/: README.md  results.json
benchmark/grounding_eval/: REPORT.md  harness.py  results.json  results_sweep.json
benchmark/hybrid/: BENCHMARK.md  results.json
benchmark/identity_ladder/: IDENTITY_LADDER.md  identity_ladder.json
benchmark/lending_fault_model/: LENDING_FAULT_MODEL.md  README.md  RESOLUTION_LADDER.md  SWER.md  __init__.py  faults.py  ground_truth.py  resolution_ladder.py  resolution_ladder_results.json  results.json  run.py  swer.py  swer_results.json
docs/: BYOC_CONNECTOR.md  ECOSYSTEM_INTEGRATION.md  EFFECT_KIT.md  ELIGIBILITY_API_WATERFALL.md  ENTERPRISE_ARCHITECTURE.md  EXCEPTION_INBOX.md  L1_INTEGRATION.md  LIMITS.md  ON_PREM.md  PRIVACY.md  PRODUCT_STATUS.md  SANITIZED_ARTIFACTS.md  SOURCE_BOUNDARY.md  VERIFICATION.md  VISUALIZE.md  deployment.example.yaml  desktop_windows_runbook.md  grounding_rung.md  phi_at_rest.md  phi_in_transit.md  verification.json
openadapt_flow/: __init__.py  __main__.py  _browser_setup.py  backend.py  bench.py  bundle_validation.py  crypto.py  demo_driver.py  deployment.py  desktop_record.py  hosted.py  image_hash.py  interactive_recorder.py  ir.py  policy.py  privacy.py  recorder.py  report.py  risk.py  run_gate.py  runtime_validation.py  sanitized_artifact.py  traversal.py  volatility.py
paper/: ARTIFACT_CHECKLIST.md  Makefile  README.md  REVIEW_ADVERSARIAL.md  REVIEW_ADVERSARIAL_2.md  check_artifacts.py  main.tex  references.bib
schemas/: program-graph-v1.json  runtime-validation-attestation-v1.json  sanitization-ingest-v1.json  sanitized-artifact-approval-v1.json  sanitized-artifact-manifest-v1.json
scripts/: build_showcase_encounter_loop_bundle.py  build_showcase_loop_bundle.py  check_bundle_phi.py  check_consistency.py  check_release_ci.py  check_release_consistency.py  demo_media.py  frappe_lending_demo.py  make_demo_gif.py  openemr_demo.py  openemr_local_demo.py  openemr_param_depth.py  openimis_claims_demo.py  openimis_eligibility_demo.py  qualify_linux_atspi.py  qualify_macos_ax_identity.py  qualify_macos_textedit.py  quickstart_lifecycle.py  sanitize_rdp_qualification_report.py  validate_claims.py
tests/: __init__.py  _fhir_fake.py  conftest.py  test_adversarial_vision.py  test_adversary_corpus.py  test_adversary_corpus_v2.py  test_adversary_corpus_v3.py  test_annotate.py  test_attended_actions.py  test_backend_capability_matrix.py  test_backend_factory.py  test_benchmark.py  test_benchmark_environments.py  test_browser_setup.py  test_bundle_schema_v2.py  test_byo_grounding_model.py  test_capture_adapter.py  test_chart_fonts.py  test_ci_workflow_contract.py  test_citrix_workspace_backend.py  test_citrix_workspace_qualification.py  test_cli_deployment.py  test_cli_induce.py  test_cli_new_commands.py  test_comparison_artifact.py  test_competitor_drift_instrument.py  test_compile_identifier_crop.py  test_compiler.py  test_connector.py  test_consistency.py  test_console.py  test_continuous_learning.py  test_dense_surface.py  test_dependency_security.py  test_desktop_benchmark.py  test_desktop_record.py  test_desktop_recorder.py  test_disambiguation.py  test_dom_arm.py  test_dom_identity.py  (+135 more)
(+425 files in other folders)
