[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openadapt-flow"
version = "0.4.0"
description = "Demonstration compiler: record a desktop workflow once, compile it into a deterministic, self-healing, locally-run script."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "OpenAdapt.AI" }]
dependencies = [
    "pydantic>=2.5",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pillow>=10.0",
    "imagehash>=4.3",
    "rapidocr-onnxruntime>=1.3",
    # The reference backend and the CLI's demo-record/replay self-serve
    # path drive a Playwright browser; core, not a dev extra.
    "playwright>=1.44",
    # GPU-less runners call the on-prem VLM appliance over HTTP
    # (runtime.remote_vlm). Lightweight; core so the fail-safe client is
    # always importable on a runner.
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-timeout>=2.2",
    # Property-based (fuzz) testing of the identity gate's never-false-accept
    # invariant (tests/test_identity_fuzz.py).
    "hypothesis>=6.100",
    # Benchmark harness: agent baseline (anthropic) + chart rendering.
    "anthropic>=0.40",
    "matplotlib>=3.8",
    # Pixel-identity validation probe: SSIM comparison method (dev-only; the
    # pixel tier is hard-gated OFF in the shipped runtime).
    "scikit-image>=0.22",
    # WindowsBackend tests (mock WAA server).
    "requests>=2.31",
    # VLM service tests (TestClient over the FastAPI app).
    "fastapi>=0.110",
]
grounder = ["anthropic>=0.40"]
# PRIMARY grounding rung: OCR text-anchoring via openadapt-grounding
# (pillow + pytesseract; CPU-only, no GPU, no served model, no paid API).
# OCRAnchorGrounder imports it lazily and abstains (returns None) when absent,
# so the core stays installable and the ladder safe-halts without it.
grounding = ["openadapt-grounding>=0.1.0"]
# WindowsBackend: HTTP client for the WAA (Windows Agent Arena) server.
windows = ["requests>=2.31"]
# FreeRDPBackend: pure-Python async RDP client for the pixel-only RDP path
# (L1/Retinology EMR over RDP). Lazily imported by AardwolfTransport — never
# needed for the mock-tested adapter, only for the real/live transport.
rdp = ["aardwolf>=0.2.13"]
# PHI/PII scrubbing on persist/log paths (Presidio-backed). Optional: the
# runtime imports openadapt_flow.privacy unconditionally, but it degrades to a
# no-op when this extra is absent (OPENADAPT_FLOW_SCRUB=auto). A regulated
# deployment installs this and sets OPENADAPT_FLOW_SCRUB=on to fail closed.
# After install: python -m spacy download en_core_web_trf
privacy = ["openadapt-privacy[presidio]>=0.1.0"]
# On-prem VLM inference service (the GPU-box appliance side).
service = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
# Apple-Silicon dev backend for the VLM service (local model, no GPU box).
service-mlx = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "mlx-vlm>=0.1"]
# Cross-platform desktop recording on-ramp: convert an openadapt-capture
# session into a flow recording (openadapt_flow.adapters.capture). Optional and
# imported lazily — the flow core never pulls it onto the replay hot path. Note:
# openadapt-capture screenshots the display when imported, so this on-ramp needs
# a real desktop session (not headless CI).
capture = ["openadapt-capture>=0.5.1"]
# Canonical action-vocabulary interop (openadapt_flow.interop.types). Boundary
# only (emit / benchmark round-trip); never on the replay hot path. The shim
# imports openadapt-types lazily, so the core stays importable without it.
interop = ["openadapt-types>=0.1.0"]

[project.scripts]
openadapt-flow = "openadapt_flow.__main__:main"
openadapt-flow-vlm-service = "openadapt_flow.services.vlm_service.__main__:main"


[tool.hatch.build.targets.wheel]
packages = ["openadapt_flow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 600

# Auto-release (matches the other openadapt repos). Python Semantic Release
# computes the next version from Conventional Commit subjects since the last
# tag: `feat:` -> minor, `fix:`/`perf:` -> patch, `BREAKING CHANGE` -> major.
# See .github/workflows/release.yml.
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore: release {version}"
build_command = "pip install uv && uv build"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
