[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openadapt-flow"
version = "0.24.0"
description = "Demonstration compiler: record a desktop workflow once, compile it into a deterministic, self-healing, locally-run script."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "OpenAdapt.AI" }]
dependencies = [
    "pydantic>=2.5",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pillow>=10.0",
    "imagehash>=4.3",
    "rapidocr-onnxruntime>=1.3",
    # The reference backend and the CLI's demo-record/replay self-serve
    # path drive a Playwright browser; core, not a dev extra.
    "playwright>=1.44",
    # GPU-less runners call the on-prem VLM appliance over HTTP
    # (runtime.remote_vlm). Lightweight; core so the fail-safe client is
    # always importable on a runner.
    "httpx>=0.27",
    # Policy files (openadapt_flow.policy) are YAML; the `certify` CLI and the
    # shipped example policies load them. Tiny, pure-Python, core so `certify`
    # works out of the box.
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-timeout>=2.2",
    # Property-based (fuzz) testing of the identity gate's never-false-accept
    # invariant (tests/test_identity_fuzz.py).
    "hypothesis>=6.100",
    # Benchmark harness: agent baseline (anthropic) + chart rendering.
    "anthropic>=0.40",
    "matplotlib>=3.8",
    # Pixel-identity validation probe: SSIM comparison method (dev-only; the
    # pixel tier is hard-gated OFF in the shipped runtime).
    "scikit-image>=0.22",
    # WindowsBackend tests (mock WAA server).
    "requests>=2.31",
    # VLM service tests (TestClient over the FastAPI app).
    "fastapi>=0.110",
    # Engineering-hygiene gates (lint+format, type-check, coverage). Pinned to
    # majors so CI and local dev run the same checkers.
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest-cov>=5.0",
]
grounder = ["anthropic>=0.40"]
# PRIMARY grounding rung: OCR text-anchoring via openadapt-grounding
# (pillow + pytesseract; CPU-only, no GPU, no served model, no paid API).
# OCRAnchorGrounder imports it lazily and abstains (returns None) when absent,
# so the core stays installable and the ladder safe-halts without it.
grounding = ["openadapt-grounding>=0.1.0"]
# WindowsBackend: HTTP client for the WAA (Windows Agent Arena) server.
windows = ["requests>=2.31"]
# FreeRDPBackend: pure-Python async RDP client for the pixel-only RDP path
# (L1/Retinology EMR over RDP). Lazily imported by AardwolfTransport — never
# needed for the mock-tested adapter, only for the real/live transport.
rdp = ["aardwolf>=0.2.13"]
# PHI/PII scrubbing on persist/log paths (Presidio-backed). Optional: the
# runtime imports openadapt_flow.privacy unconditionally, but it degrades to a
# no-op when this extra is absent (OPENADAPT_FLOW_SCRUB=auto). A regulated
# deployment installs this and sets OPENADAPT_FLOW_SCRUB=on to fail closed.
# After install: python -m spacy download en_core_web_trf
privacy = ["openadapt-privacy[presidio]>=0.1.0"]
# On-prem VLM inference service (the GPU-box appliance side).
service = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
# Apple-Silicon dev backend for the VLM service (local model, no GPU box).
service-mlx = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "mlx-vlm>=0.1"]
# Cross-platform desktop recording on-ramp: convert an openadapt-capture
# session into a flow recording (openadapt_flow.adapters.capture). Optional and
# imported lazily — the flow core never pulls it onto the replay hot path. Note:
# openadapt-capture screenshots the display when imported, so this on-ramp needs
# a real desktop session (not headless CI).
capture = ["openadapt-capture>=0.5.1"]
# Canonical action-vocabulary interop (openadapt_flow.interop.types). Boundary
# only (emit / benchmark round-trip); never on the replay hot path. The shim
# imports openadapt-types lazily, so the core stays importable without it.
interop = ["openadapt-types>=0.1.0"]

[project.scripts]
openadapt-flow = "openadapt_flow.__main__:main"
openadapt-flow-vlm-service = "openadapt_flow.services.vlm_service.__main__:main"


























[tool.hatch.build.targets.wheel]
packages = ["openadapt_flow"]
# Ship the PEP 561 marker so downstream type-checkers honor our annotations.
[tool.hatch.build.targets.wheel.force-include]
"openadapt_flow/py.typed" = "openadapt_flow/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 600

# Auto-release (matches the other openadapt repos). Python Semantic Release
# computes the next version from Conventional Commit subjects since the last
# tag: `feat:` -> minor, `fix:`/`perf:` -> patch, `BREAKING CHANGE` -> major.
# See .github/workflows/release.yml.
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
# Keep the package __version__ in lockstep with the pyproject version so a
# released wheel never reports a stale version (they had drifted: 0.1.0 vs the
# released pyproject version).
version_variables = ["openadapt_flow/__init__.py:__version__"]
commit_message = "chore: release {version}"
build_command = "pip install uv && uv build"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

# --------------------------------------------------------------------------
# Lint + format (ruff). Real, enforced gates — see .github/workflows/ci.yml.
# --------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 88
# Generated / non-package trees at the repo root are not part of the lint
# surface. Anchored with a leading slash so the package's own
# openadapt_flow/benchmark/ IS still linted (a bare "benchmark" would match it).
extend-exclude = ["/benchmark", "/docs", "/runs", "/dist"]

[tool.ruff.lint]
# Start pragmatic: pyflakes (real bugs), the safe pycodestyle subset, warnings,
# and import sorting. Deliberately excludes opinionated rewrite families
# (UP/SIM/B) for now so the gate is green on the current code and can be
# tightened incrementally.
select = ["E4", "E7", "E9", "F", "W", "I"]
ignore = [
    # Ambiguous single-letter name `l`: used only as an OCR-line loop variable
    # in a handful of comprehensions; renaming is churn with no safety value.
    "E741",
    # Line length is shaped by the formatter; long strings/URLs/regexes here
    # would otherwise trip E501 without improving readability.
    "E501",
]

[tool.ruff.format]
# Match the formatter to the codebase's existing conventions.
quote-style = "double"
indent-style = "space"

# --------------------------------------------------------------------------
# Type checking (mypy). Lenient by design and green today; tighten over time.
# Scoped to the core package (not tests, not the benchmark harness).
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
files = ["openadapt_flow"]
# Optional extras (aardwolf, openadapt_grounding, openadapt_capture, mlx_vlm,
# rapidocr, cv2, …) are imported lazily and have no stubs — don't fail on them.
ignore_missing_imports = true
warn_unused_configs = true
# Kept off intentionally to start lenient (annotations are not yet complete);
# these are the knobs to flip when tightening.
disallow_untyped_defs = false
check_untyped_defs = false

# numpy 2.x ships stubs that use 3.12-only `type` statement syntax; parsing
# them under our 3.10 target crashes mypy. We don't type-check against numpy's
# internals, so skip following into it (and treat it as untyped). (scikit-image
# -> tifffile has the same issue, but its only consumer here — the pixel probe —
# is in the ignore-errors debt list below, so mypy never follows into it.)
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

# Known type-check debt. These modules have pre-existing errors that need real
# code changes to resolve; they're excluded from the gate for now so the
# checker is green while still covering the other modules. Remove entries here
# as the annotations are hardened.
[[tool.mypy.overrides]]
module = [
    "openadapt_flow.__main__",
    "openadapt_flow.backends.playwright_backend",
    "openadapt_flow.backends.rdp_backend",
    "openadapt_flow.benchmark.desktop_benchmark",
    "openadapt_flow.compiler.compile",
    "openadapt_flow.compiler.disambiguation",
    "openadapt_flow.interactive_recorder",
    "openadapt_flow.learning.synth_stream",
    "openadapt_flow.report",
    "openadapt_flow.runtime.effects._common",
    "openadapt_flow.runtime.grounder",
    "openadapt_flow.runtime.healing.perturbation",
    "openadapt_flow.runtime.identity",
    "openadapt_flow.runtime.replayer",
    "openadapt_flow.services.vlm_service.app",
    "openadapt_flow.services.vlm_service.backends",
    "openadapt_flow.services.vlm_service.batching",
    "openadapt_flow.validation.adversary_corpus",
    "openadapt_flow.validation.dense_surface",
    "openadapt_flow.validation.identity_ladder",
    "openadapt_flow.validation.identity_roc",
    "openadapt_flow.validation.pixel_identity_probe",
    "openadapt_flow.validation.vlm_identity_probe",
    "openadapt_flow.vision.hashing",
]
ignore_errors = true

# --------------------------------------------------------------------------
# Coverage (visibility only — no hard floor yet).
# --------------------------------------------------------------------------
[tool.coverage.run]
source = ["openadapt_flow"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
